--- a/BaseVideo/src/main/AndroidManifest.xml
+++ b/BaseVideo/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.huoyan.basevideo">
-    <!-- 请求访问网络状态 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 请求访问网络 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <!-- 乐播投屏 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -24,6 +27,7 @@
     <uses-permission
         android:name="android.permission.CAPTURE_SECURE_VIDEO_OUTPUT"
         tools:ignore="ProtectedPermissions" />
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
